# template-python

./: .gitignore  Makefile  README.md  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: task.yaml
_github/workflows/: task.yaml
docker/: Dockerfile
template-python/common/: func.py
template_python/: main.py
template_python/common/: __init__.py  func.py
tests/: test_run.py
