[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["motty.mio2 <motty.mio2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E266,E402"

[tool.isort]
profile = "black"
lines_after_imports = 2
